Grid img stretch fix

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -48,6 +48,7 @@
 .grid img {
 	max-height: 100%;
 	max-width: 100%;
+	object-fit: contain;
 }
 
 .grid .column-1, .grid .cell-1 { width: calc((6.25% - var(--grid-margin)) + ((var(--grid-margin) / 16))); }
